Html and css for navigation menu

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
-    <section class="header_navigation">
+    <!--HEADER-->
+    <section class="header-navigation">
         <div class="wrapper header-navigation__wrapper">
             <a 
                 href="#" 
@@ -19,6 +20,35 @@
                     alt="logo"
                 >
             </a>
+        </div>
+    </section>
+    <section class = "about-product">
+        <div class="wrapper about-product__wrapper">
+            <div class="about-product__navigation">
+                <a 
+                    href="#" 
+                    class="about-product_navigation-menu">1 series
+                </a>
+                <a 
+                    href="#" 
+                    class="about-product_navigation-menu">2 series
+                </a>
+                <a 
+                    href="#" 
+                    class="about-product_navigation-menu">3 series
+                </a>
+                <a 
+                    href="#" 
+                    class="about-product_navigation-menu">4 series
+                </a>
+                <a 
+                    href="#" 
+                    class="about-product_navigation-menu">5 series
+                </a>
+            </div>
+            <div class="about-product__info-block">
+                <h1>About model</h1>
+            </div>
         </div>
     </section>
 </body>
