--- a/index.html
+++ b/index.html
@@ -22,34 +22,38 @@
             </a>
         </div>
     </section>
+    <!--NAVIGATION AND ABOUT PRODUCT-->
     <section class = "about-product">
         <div class="wrapper about-product__wrapper">
             <div class="about-product__navigation">
-                <a 
+                <button 
                     href="#" 
-                    class="about-product_navigation-menu">1 series
-                </a>
-                <a 
+                    class="about-product_navigation-menu button" id="1">1 series
+                </button>
+                <button
                     href="#" 
-                    class="about-product_navigation-menu">2 series
-                </a>
-                <a 
+                    class="about-product_navigation-menu button" id="2">2 series
+                </button>
+                <button
                     href="#" 
-                    class="about-product_navigation-menu">3 series
-                </a>
-                <a 
+                    class="about-product_navigation-menu button" id="3">3 series
+                </button>
+                <button
                     href="#" 
-                    class="about-product_navigation-menu">4 series
-                </a>
-                <a 
+                    class="about-product_navigation-menu button" id="4">4 series
+                </button>
+                <button
                     href="#" 
-                    class="about-product_navigation-menu">5 series
-                </a>
+                    class="about-product_navigation-menu button" id="5">5 series
+                </button>
             </div>
             <div class="about-product__info-block">
-                <h1>About model</h1>
+                <h1 class="about-product__main-title">BMW 1 series</h1>
+                <img src="https://www.bmw.ua/content/dam/bmw/common/all-models/1-series/5-door/2019/inspire/bmw-1-series-inspire-taphold-driving-dynamics-desktop-01.jpg/jcr:content/renditions/cq5dam.resized.img.1185.large.time1627482147001.jpg" alt="bmw 1 series" class="about-product__main-image">
+                <p class="about-product__description">Чисте прагнення: новий BMW 1 серії прибув, щоб привернути до себе захоплені погляди. Його видатний дизайн і прогресивна мова дизайну виділяють його з натовпу. Те ж саме стосується і його салону із сучасною атмосферою, яка надихає своєю першокласною якістю та відкритістю. Ефективні двигуни, передній привід, вперше представлений в новій BMW 1 серії, і новітні технології шасі гарантують враження від керування, повні динаміки і маневреності, а інноваційні технології та системи.</p>
             </div>
         </div>
     </section>
+    <script src="script.js"></script>
 </body>
 </html>
